Fixes the quick links menu on smaller screens

--- a/css/_navigation.scss
+++ b/css/_navigation.scss
@@ -35,10 +35,15 @@
 		position: absolute;
       	top: 0;
 	}
-	
-	/* Fixes SVG icon display in FF */
 	.audience-nav-wrap { 
-		.arw-right svg {
+        background-color: $orangeDark;
+        
+        @include breakFirst(medium){
+            margin-right: 50px;
+            position: absolute;
+        }
+        /* Fixes SVG icon display in FF */
+        .arw-right svg {
 			transform: translate(0, 0);
 			margin: 18px 12px;
 			top: 0;
